<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/icon_login"
    android:orientation="vertical"
    tools:context="com.example.edz.myapplication.activity.LoginActivity">



    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@drawable/icon_logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+86"
                android:textColor="@color/colorWhite" />

            <View
                android:layout_width="1dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@color/colorWhite" />

            <EditText
                android:id="@+id/edit_phoneNB"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@null"
                android:hint="@string/hint_phonenumber"
                android:inputType="phone"
                android:maxLength="11"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:textCursorDrawable="@drawable/shape_et_cursor"
                android:textSize="12sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorWhite" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edit_verification"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/SMSVerification_code"
                android:maxLength="6"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"

                android:textCursorDrawable="@drawable/shape_et_cursor"
                android:textSize="12sp" />
            <!--android:digits="qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM"-->
            />

            <TextView
                android:id="@+id/text_smscode"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/Verification_code"
                android:textColor="@color/colorWhite" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorWhite" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/layout_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">


        <EditText
            android:id="@+id/edit_invitecode"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@null"
            android:hint="请输入邀请码"
            android:maxLength="4"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            android:textCursorDrawable="@drawable/shape_et_cursor"
            android:textSize="12sp" />


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorWhite" />


        <EditText
            android:id="@+id/edit_nickname"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@null"
            android:hint="请输入昵称，不能超过10个字符"
            android:maxLength="10"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            android:textCursorDrawable="@drawable/shape_et_cursor"
            android:textSize="12sp" />


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorWhite" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:button="@drawable/radio"
            android:checked="true"
            android:textColor="@color/colorWhite" />

        <TextView
            android:id="@+id/text_protocol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/User_agreement"
            android:textColor="@color/colorWhite" />
    </LinearLayout>


    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/background_login_btn"
        android:text="@string/Log_start"
        android:textColor="@color/colorWhite" />
</LinearLayout>
